Use non-deprecated ERB parameters when generating deb/rpm script templates for fpm

--- a/installers/linux/deb/after-upgrade.sh.erb
+++ b/installers/linux/deb/after-upgrade.sh.erb
@@ -16,10 +16,10 @@
 #########################################################################
 -%>
 
-<%= ERB.new(File.read(File.join(install_scripts_dir, 'shared', 'partials', '_set-debian-permissions.sh.erb')), nil, '-', "_#{SecureRandom.hex}").result(binding) %>
+<%= ERB.new(File.read(File.join(install_scripts_dir, 'shared', 'partials', '_set-debian-permissions.sh.erb')), trim_mode: '-', eoutvar: "_#{SecureRandom.hex}").result(binding) %>
 
 <% if File.exist?(File.join(install_scripts_dir, 'shared', 'partials', "_#{name}-cleanup_temp_files_from_previous_version.sh.erb")) -%>
-  <%= ERB.new(File.read(File.join(install_scripts_dir, 'shared', 'partials', "_#{name}-cleanup_temp_files_from_previous_version.sh.erb")), nil, '-', "_#{SecureRandom.hex}").result(binding) %>
+  <%= ERB.new(File.read(File.join(install_scripts_dir, 'shared', 'partials', "_#{name}-cleanup_temp_files_from_previous_version.sh.erb")), trim_mode: '-', eoutvar: "_#{SecureRandom.hex}").result(binding) %>
 <% end -%>
 
     /usr/share/<%= name %>/bin/<%= name %> install 2>&1 || true
