--- a/installers/linux/rpm/before-upgrade.sh.erb
+++ b/installers/linux/rpm/before-upgrade.sh.erb
@@ -16,7 +16,7 @@
 #########################################################################
 -%>
 
-<%= ERB.new(File.read(File.join(install_scripts_dir, 'shared', 'partials', "_#{name}-config-migration.sh.erb")), nil, '-', "_#{SecureRandom.hex}").result(binding) %>
+<%= ERB.new(File.read(File.join(install_scripts_dir, 'shared', 'partials', "_#{name}-config-migration.sh.erb")), trim_mode: '-', eoutvar: "_#{SecureRandom.hex}").result(binding) %>
 
     rm -rf %{_localstatedir}/lib/rpm-state/<%= name %>
     if /etc/init.d/<%= name %> status > /dev/null 2>&1; then
