Fix FontAwesome icons for plugins using CSS classes
Some plugins hardcode CSS classes to "fa", others hardcoded font-family to "FontAwesome", which poses
a problem with Font Awesome 6 and its "free" version since the default Font Family is "Font Awesome 6 Free"
and the icons are typically "solid" (900 weight) rather than what they used to be. To make this backward
compatible we really need to support both the old CSS class and the old font-family name on these views.

Hopefully this addresses it without further compat issues.

--- a/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/_font-awesome-sprockets.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/_font-awesome-sprockets.scss
@@ -39,3 +39,14 @@ $fa-font-path: "@fortawesome/fontawesome-free/webfonts";
   font-style: normal;
   font-weight: 400;
 }
+
+// For backward compatibility with old Font Awesome 4 where certain plugins/places use the
+// old CSS prefixes and/or font family names hard-coded in their views. Overrides default font-family names
+// from within @fortawesome/fontawesome-free/scss/core to match how we declare font-faces
+.fa, .fa-classic, .fas, .fa-solid, .far, .fa-regular {
+  font-family: FontAwesome, sans-serif;
+}
+
+.fab, .fa-brands {
+  font-family: FontAwesomeBrands, sans-serif;
+}
